Set minimum page width and fix spacing.

--- a/src/main/webapp/schema.css
+++ b/src/main/webapp/schema.css
@@ -19,7 +19,6 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: center;
-	height: 100%;
 }
 
 code {
